--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="libraries/selenium-server-standalone-3.141.59.jar"/>
-	<classpathentry kind="lib" path="libraries/testng-6.14.3.jar"/>
+	<classpathentry kind="lib" path="libraries/testng-6.14.3.jar" sourcepath="libraries/testng-6.14.3-sources.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/bcpkix-jdk18on-1.75.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/bcprov-jdk18on-1.75.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/bcutil-jdk18on-1.75.jar"/>
