--- a/.classpath
+++ b/.classpath
@@ -45,5 +45,10 @@
 	<classpathentry kind="lib" path="libReportTestNG/reportng-1.1.4.jar"/>
 	<classpathentry kind="lib" path="libReportTestNG/reportng-1.1.4-sources.jar"/>
 	<classpathentry kind="lib" path="libReportTestNG/velocity-1.4.jar"/>
+	<classpathentry kind="lib" path="libExtendV5/extentreports-5.0.8.jar"/>
+	<classpathentry kind="lib" path="libExtendV5/freemarker-2.3.30.jar"/>
+	<classpathentry kind="lib" path="libExtendV5/lombok-1.18.12.jar"/>
+	<classpathentry kind="lib" path="libExtendV5/reactive-streams-1.0.3.jar"/>
+	<classpathentry kind="lib" path="libExtendV5/rxjava-3.0.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
